@@ -136,6 +136,13 @@ twic.utils.url.humanize = function(url, links) {
 		title = 'foursquare - ' + url;
 		cutted = '<img src="https://foursquare.com/favicon.ico" class="aicon" />';
 	} else
+	if (
+		clen > 9
+		&& 'tumblr.com' === cutted.substr(0, 10)
+	) {
+		title = 'tumblr - ' + url;
+		cutted = '<img src="https://tumblr.com/favicon.ico" class="aicon" />';
+	} else
 	if (clen > 30) {
 		cutted = cutted.substring(0, 30) + '&hellip;';
 	}	else
