@@ -1,6 +1,7 @@
 0.26 (in development):
 	* No suggest for email addresses
 	+ t.co links expander
+	+ Showing tumblr.com links as an icons
 
 0.25:
 	* Bug with suggest select with mouse is fixed
